moved phash and libscapi submodules to libraries folder, renamed todo's folder, deleted git-feature workflow instructinos

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "pHash"]
-	path = lib/pHash
+[submodule "libraries/pHash"]
+	path = libraries/pHash
 	url = https://github.com/dahadaller/pHash.git
-[submodule "libscapi"]
-	path = lib/libscapi
+[submodule "libraries/libscapi"]
+	path = libraries/libscapi
 	url = https://github.com/cryptobiu/libscapi.git
